--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -10,8 +10,11 @@
 {% else %}
 
     <nav>
-        {% assign pages = site.pages | where_exp:"item","item.menus.header" | group_by_exp:"item","item.menus.header.weight | default:-1" %}
-        {% assign pages = site.pages | where_exp:"item","item.menus == 'header'" | group_by_exp:"item","item.weight | default:-1" | concat:pages %}
+        {% assign allPages = site.pages | concat:site.posts %}
+        {% assign pages = allPages | where_exp:"item","item.menu.header" | group_by_exp:"item","item.menu.header.weight | default:-1" %}
+        {% assign pages = allPages | where_exp:"item","item.menus.header" | group_by_exp:"item","item.menus.header.weight | default:-1" | concat:pages %}
+        {% assign pages = allPages | where_exp:"item","item.menu == 'header'" | group_by_exp:"item","item.weight | default:-1" | concat:pages %}
+        {% assign pages = allPages | where_exp:"item","item.menus == 'header'" | group_by_exp:"item","item.weight | default:-1" | concat:pages %}
         {% assign pages = site.data.menus.header | group_by_exp:"item","item.weight | default:-1" | concat:pages %}
         {% assign pages = pages | sort:"name" %}
 
