--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     </main>
     
     <footer>
-        {% for link in site.data.social_links %}
+        {% for link in site.data.social-links %}
             <a href="{{ link.url }}" class="social-link" title="{{ link.name }}">
                 <i class="{{ link.icon-class }} fa-fw fa-lg"></i>
             </a>
