--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% include common/head.html %}
+    {% include meta/webpage.html %}
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ '/assets/css/theme.css' | relative_url }}" />
-    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
-        crossorigin="anonymous"></script>
 </head>
-
 <body>
-
-    <header>
-        <img src="{{ site.icon | relative_url }}" />
-        {% include menu-header.html %}
-    </header>
+    {% include common/header.html %}
     
     <main>
         {{ content }}
     </main>
     
-    <footer>
-        {% for link in site.data.social-links %}
-            <a href="{{ link.url }}" class="social-link" title="{{ link.name }}">
-                <i class="{{ link.icon-class }} fa-fw fa-lg"></i>
-            </a>
-        {% endfor %}
-    </footer>
-
+    {% include common/footer.html %}
 </body>
-
 </html>
