--- a/_includes/common/nav.html
+++ b/_includes/common/nav.html
@@ -3,7 +3,7 @@
     
     <nav>
         {% for item in site.menus.header %}
-            {% include menu-header-item.html url=item.url title=item.title %}
+            {% include common/nav-item.html url=item.url title=item.title %}
         {% endfor %}
     </nav>
     
@@ -22,7 +22,7 @@
             {% for pageItem in pageGroup.items %}
                 {% assign itemUrl = pageItem.menu.header.url | default:pageItem.menus.header.url | default:pageItem.url %}
                 {% assign itemTitle = pageItem.menu.header.title | default:pageItem.menus.header.title | default:pageItem.title %}
-                {% include menu-header-item.html url=itemUrl title=itemTitle %}
+                {% include common/nav-item.html url=itemUrl title=itemTitle %}
             {% endfor %}
         {% endfor %}
     </nav>
