--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    {% for link in site.data.social-links %}
+    {% for link in site.data.social_links %}
         <a href="{{ link.url }}" class="social-link" title="{{ link.name }}">
             <i class="{{ link.icon-class }} fa-fw fa-lg"></i>
         </a>
